--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4412,7 +4412,7 @@ comments-list
  ===============================================*/
 #footer.gray {
     padding: 80px 0;
-    background: #c0f2c0;/*#f5f5f5;*/
+    background: #668B66; /*#c0f2c0; #f5f5f5; footer color*/
 }
 
 #footer.dark {
