--- a/assets/css/aj.css
+++ b/assets/css/aj.css
@@ -99,4 +99,8 @@
 }
 }
 
-.backdrop{-webkit-backdrop-filter: blur(10px);}
+.backdrop{
+  position: relative;
+    -webkit-transition: all .3s;
+            transition: all .3s;
+    background-color: rgba(0, 0, 0, .6);}
