--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -773,7 +773,7 @@ pre {
     font-size: 20px;
     font-weight: 100;
     line-height: 50px;
-    font-family: font71356;
+    font-family: Palatino;
   /*  text-shadow:
    -1px -1px 0 #000,
     1px -1px 0 #000,
