Map Updated with color
t# with '#' will be ignored, and an empty message aborts the commit.

--- a/assets/css/aj.css
+++ b/assets/css/aj.css
@@ -93,3 +93,9 @@
   font-family: Palatino;
   src: url("../vendor/Palatino.ttf");
 }
+
+.palatino{
+  font-family: Palatino;
+}
+
+.style1 {background-color:#ffffff;font-weight:bold;border:2px #006699 solid;}
