outdoor plant instalation text hovered

--- a/assets/css/aj.css
+++ b/assets/css/aj.css
@@ -119,3 +119,14 @@ form start
 /*
 form end
 */
+
+#wrapperN .textN {
+position:relative;
+bottom:30px;
+left:0px;
+visibility:hidden;
+}
+
+#wrapperN:hover .textN {
+visibility:visible;
+}
